@@ -1,5 +1,8 @@
 2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* apps/app_mixmonitor.c (launch_monitor_thread): ast_strlen_zero can handle NULL input (issue #5561)
+	(mixmonitor_exec): same
+
 	* res/res_features.c (ast_feature_request_and_dial): ensure that channel variables are inherited from the channel placing the call (issue #5499)
 
 	* utils.c (getloadavg): change to using _BSD_SOURCE as the indicator for whether this function is present or not (issue #5549)
